--- a/index.html
+++ b/index.html
@@ -126,9 +126,8 @@
           </p>
 
           <div class="collapse" id="collapseExample">
-            <div style="height: 100px;" class="card card-body">
-              
-              <p> <embed src="https://bit.ly/2YXzQq2" type=""> </p>
+            <div style="height: 150px;" class="card card-body">
+               <p> &lt;embed type="text/html" src="https://bit.ly/2YXzQq2" width="500" height="200"&gt;</p>
               <a href="">Ver visualización con Flourish</a>
             </div>
           </div>
