--- a/index.html
+++ b/index.html
@@ -266,7 +266,7 @@
 <table class="table">
         <thead>
           <tr>
-            <th style="width: 100px;" scope="col">Lugar en las listas</th>
+            <th style="width: 100px;" scope="col">#</th>
             <th scope="col">Pacto</th>
            
             <th scope="col">Partidos</th>
