--- a/index.html
+++ b/index.html
@@ -26,11 +26,14 @@
     <div class="intro">
         <h1>A un mes de las elecciones</h1>
 
-        <p class="texto">Las elecciones de Chile para elegir al sustituto del presidente Sebastián Piñera están en la recta final, y a un mes de las elecciones siete candidatos se disputan su lugar en La Moneda.
+        <p class="texto">
+          Las elecciones de Chile para elegir al sustituto del presidente Sebastián Piñera están en la recta final, y a un mes de los comicios siete candidatos se disputan su lugar en La Moneda.
           <br>
-          El próximo 21 de noviembre se lleva a cabo la primera vuelta presidencial en simultaneo con elecciones de diputados, senadores y consejeros regionales.
           <br>
-          En las últimas, ningún candidato supera la barrera del 50%, por lo que el 19 de diciembre de 2021 están previstas el ballotage. 
+          El próximo 21 de noviembre se lleva a cabo la primera vuelta presidencial en simultáneo con elecciones a diputados, senadores y consejeros regionales.
+          <br>
+          <br>
+          En las últimas encuestas, ningún candidato supera la barrera del 50%, por lo que se espera que el próximo 19 de diciembre se lleve a cabo una segunda vuelta para definir el nuevo presidente de los chilenos.
           </p>
         <div style="margin-left: 50px;">
 
@@ -209,10 +212,18 @@
 
     <h3 style="margin-bottom: 50px;"><i class="em em-chart_with_upwards_trend" aria-role="presentation" aria-label="CHART WITH UPWARDS TREND"></i> -Las encuestas</h3>
 
-    <p class="texto">Cuando parecía que una segunda vuelta Boric-Sichel parecía consolidarse, un mes y una serie de acontecimientos afectaron duramente al candidato oficialista que se encuentra cuarto en algunos sondeos. A su vez, otro candidato de derecha, Kast capturó a una parte del electorado, la suficiente para llegar al liderar la carrera en algunos sondeos.
+    <p class="texto">
+      Cuando parecía que una segunda vuelta entre Gabriel Boric- Sebastián Sichel se consolidaba en los sondeos, una serie de acontecimientos afectaron duramente al candidato oficialista que se encuentra cuarto en la intención de voto actualmente.
       <br>
       <br>
-      En Chile, las elecciones no son obligatorias. Tanto la publicación del estudio “Plaza Pública” de la encuestadora Cadem y “pulso ciudadano” de la empresa Activa están basados en (preguntar a Gustavo lo del 100%)
+      A su vez, otro candidato de derecha, José Antonio Kast capturó a una parte del electorado que lo llevó a liderar la carrera en algunos sondeos.
+      <br>
+      <br>
+      En Chile, las elecciones no son obligatorias y la participación no supera el 50% desde que se instaló el voto voluntario en 2012. En las últimas elecciones en junio a gobernador regional y a constituyentes, solo el 19,6% acudió a las urnas, lo que equivale a 2,5 millones de chilenos de los 13 millones que se encuentran en el padrón electoral. 
+      <br>
+      <br>
+      Tanto la publicación del estudio “Plaza Pública” de la encuestadora Cadem y “Pulso ciudadano” de la empresa Activa están basados en (preguntar a Gustavo lo del 100%)
+
       </p>
     <h3>Intención de voto</h3>
     <p>Actualizado al 13 de octubre</p>
