--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <div class="intro">
         <h1>A un mes de las elecciones</h1>
 
-        <p class="texto">
+        <p class="texto text-justify">
           Las elecciones de Chile para elegir al sustituto del presidente Sebastián Piñera están en la recta final, y a un mes de los comicios siete candidatos se disputan su lugar en La Moneda.
           <br>
           <br>
@@ -212,7 +212,7 @@
 
     <h3 style="margin-bottom: 50px;"><i class="em em-chart_with_upwards_trend" aria-role="presentation" aria-label="CHART WITH UPWARDS TREND"></i> -Las encuestas</h3>
 
-    <p class="texto">
+    <p class="texto text-justify">
       Cuando parecía que una segunda vuelta entre Gabriel Boric- Sebastián Sichel se consolidaba en los sondeos, una serie de acontecimientos afectaron duramente al candidato oficialista que se encuentra cuarto en la intención de voto actualmente.
       <br>
       <br>
